--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
+    "generate-api": "orval --config orval.config.cjs",
     "test:unit": "vitest",
     "prepare": "cypress install",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
@@ -20,7 +21,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.90.5",
     "ant-design-vue": "^4.2.6",
+    "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
@@ -36,12 +39,14 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "cypress": "^15.3.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.33.0",
     "eslint-plugin-cypress": "^5.1.1",
     "eslint-plugin-vue": "~10.4.0",
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
+    "orval": "^7.14.0",
     "prettier": "3.6.2",
     "start-server-and-test": "^2.1.2",
     "typescript": "~5.9.0",
