--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/vue-query": "^5.90.5",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
